# osukoreanbot

./: .gitignore  README.md  jp_event.json  manual_zip.sh  next_command.py  osu_events.json  osukoreanbot.py  pyproject.toml  requirements.txt  test_next_command.py  update_command.py
.github/workflows/: deploy-lambda.yml  test.yml
